// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtButton 测试在 weapp 环境 ->  展示：不同的 size 1`] = `
Array [
  <view
    className="at-button at-button--secondary at-button--full"
    onClick={[Function]}
  >
    <button
      appParameter=""
      className="at-button__wxbutton"
      lang="zh_CN"
      sendMessageImg=""
      sendMessagePath=""
      sendMessageTitle=""
      sessionFrom=""
      showMessageCard={false}
    />
    <view
      className="at-button--secondary__text at-button--full__text"
    >
      full
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--large"
    onClick={[Function]}
  >
    <button
      appParameter=""
      className="at-button__wxbutton"
      lang="zh_CN"
      sendMessageImg=""
      sendMessagePath=""
      sendMessageTitle=""
      sessionFrom=""
      showMessageCard={false}
    />
    <view
      className="at-button--secondary__text at-button--large__text"
    >
      large
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--medium"
    onClick={[Function]}
  >
    <button
      appParameter=""
      className="at-button__wxbutton"
      lang="zh_CN"
      sendMessageImg=""
      sendMessagePath=""
      sendMessageTitle=""
      sessionFrom=""
      showMessageCard={false}
    />
    <view
      className="at-button--secondary__text at-button--medium__text"
    >
      medium
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--mini"
    onClick={[Function]}
  >
    <button
      appParameter=""
      className="at-button__wxbutton"
      lang="zh_CN"
      sendMessageImg=""
      sendMessagePath=""
      sendMessageTitle=""
      sessionFrom=""
      showMessageCard={false}
    />
    <view
      className="at-button--secondary__text at-button--mini__text"
    >
      mini
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--small"
    onClick={[Function]}
  >
    <button
      appParameter=""
      className="at-button__wxbutton"
      lang="zh_CN"
      sendMessageImg=""
      sendMessagePath=""
      sendMessageTitle=""
      sessionFrom=""
      showMessageCard={false}
    />
    <view
      className="at-button--secondary__text at-button--small__text"
    >
      small
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--tiny"
    onClick={[Function]}
  >
    <button
      appParameter=""
      className="at-button__wxbutton"
      lang="zh_CN"
      sendMessageImg=""
      sendMessagePath=""
      sendMessageTitle=""
      sessionFrom=""
      showMessageCard={false}
    />
    <view
      className="at-button--secondary__text at-button--tiny__text"
    >
      tiny
    </view>
  </view>,
]
`;

exports[`AtButton 测试在 weapp 环境 ->  展示：不同的 type 1`] = `
Array [
  <view
    className="at-button at-button--primary at-button--medium"
    onClick={[Function]}
  >
    <button
      appParameter=""
      className="at-button__wxbutton"
      lang="zh_CN"
      sendMessageImg=""
      sendMessagePath=""
      sendMessageTitle=""
      sessionFrom=""
      showMessageCard={false}
    />
    <view
      className="at-button--primary__text at-button--medium__text"
    >
      primary
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--medium"
    onClick={[Function]}
  >
    <button
      appParameter=""
      className="at-button__wxbutton"
      lang="zh_CN"
      sendMessageImg=""
      sendMessagePath=""
      sendMessageTitle=""
      sessionFrom=""
      showMessageCard={false}
    />
    <view
      className="at-button--secondary__text at-button--medium__text"
    >
      secondary
    </view>
  </view>,
  <view
    className="at-button at-button--tertiary at-button--medium"
    onClick={[Function]}
  >
    <button
      appParameter=""
      className="at-button__wxbutton"
      lang="zh_CN"
      sendMessageImg=""
      sendMessagePath=""
      sendMessageTitle=""
      sessionFrom=""
      showMessageCard={false}
    />
    <view
      className="at-button--tertiary__text at-button--medium__text"
    >
      tertiary
    </view>
  </view>,
]
`;

exports[`AtButton 测试在 weapp 环境 ->  展示：默认展示 1`] = `
<view
  className="at-button at-button--secondary at-button--medium"
  onClick={[Function]}
>
  <button
    appParameter=""
    className="at-button__wxbutton"
    lang="zh_CN"
    sendMessageImg=""
    sendMessagePath=""
    sendMessageTitle=""
    sessionFrom=""
    showMessageCard={false}
  />
  <view
    className="at-button--secondary__text at-button--medium__text"
  >
    click me
  </view>
</view>
`;
